# liblangserver

./: .classpath  .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  ivpm.yaml  setup.py
.externalToolBuilders/: testbuilder.launch
doc/: Architecture.md
etc/: ivpm.info  packages.mf
python/: core.pyx
python/lls/: __init__.py  core.pxd  decl.pxd
scripts/: update_copyright.py
src/: BaseLangServer.cpp  BaseLangServer.h  CMakeLists.txt  ClientInfo.cpp  ClientInfo.h  ClientMessageDispatcher.cpp  ClientMessageDispatcher.h  CompletionOptions.cpp  CompletionOptions.h  Content.cpp  Content.h  DeclarationParams.cpp  DeclarationParams.h  Diagnostic.cpp  Diagnostic.h  DiagnosticSeverity.cpp  DiagnosticSeverity.h  DidChangeTextDocumentParams.cpp  DidChangeTextDocumentParams.h  DidCloseTextDocumentParams.cpp  DidCloseTextDocumentParams.h  DidOpenTextDocumentParams.cpp  DidOpenTextDocumentParams.h  DidSaveTextDocumentParams.cpp  DidSaveTextDocumentParams.h  Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  DocumentSymbol.cpp  DocumentSymbol.h  DocumentSymbolParams.cpp  DocumentSymbolParams.h  DocumentSymbolResponse.cpp  DocumentSymbolResponse.h  Factory.cpp  Factory.h  Hover.cpp  Hover.h  HoverParams.cpp  (+88 more)
src/include/lls/: FactoryExt.h  IClient.h  IClientCapabilities.h  IClientInfo.h  IClientMessageDispatcher.h  IContent.h  IDeclarationParams.h  IDiagnostic.h  IDidChangeTextDocumentParams.h  IDidCloseTextDocumentParams.h  IDidOpenTextDocumentParams.h  IDidSaveTextDocumentParams.h  IDocumentSymbol.h  IDocumentSymbolParams.h  IDocumentSymbolResponse.h  IFactory.h  IHover.h  IHoverParams.h  IInitializeParams.h  IInitializeResult.h  IJson.h  ILocation.h  ILocationLink.h  ILocationLinkList.h  ILocationList.h  IMarkedString.h  IMarkedStringArr.h  IMarkupContent.h  IMessageDispatcher.h  INull.h  IPosition.h  IPublishDiagnosticsParams.h  IRange.h  IServer.h  IServerCapabilities.h  IServerClientConnection.h  IServerInfo.h  IServerMessageDispatcher.h  ITextDocumentContentChangeEvent.h  ITextDocumentIdentifier.h  (+4 more)
src/include/lls/impl/: ServerBase.h
tests/: CMakeLists.txt
tests/apps/: testlangserver_main.cpp
tests/cpp/: CMakeLists.txt  FuncMessageTransportImp.cpp  FuncMessageTransportImp.h  ReqInitialize.cpp  ReqInitialize.h  TestClient.cpp  TestClient.h  TestLangServer.cpp  TestLangServer.h  TestServer.cpp  TestServer.h  TestSocketMessageTransport.cpp  TestSocketMessageTransport.h  TestTypes.cpp  TestTypes.h
tests/src/: TestBase.cpp  TestBase.h  TestInitialize.cpp  TestInitialize.h
tests/src/java/: build.xml
tests/src/java/org/liblangserver/tests/: Test.java  TestClient.java
